<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/addTaskTextViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/add_a_new_task"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/editTextNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/selectPriorityTWId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="6dp"
            android:text="@string/select_priority" />

        <Spinner
            android:id="@+id/spinnerPriorityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/priority" />

        <EditText
            android:id="@+id/editTextDateId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_task_date"/>

        <Button
            android:id="@+id/buttonAddTaskId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task" />

        <TextView
            android:id="@+id/textViewViewTasksId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/view_tasks"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>